--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
     background-color: #fff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     line-height: 24px;
     color: #637986;
@@ -122,7 +122,7 @@ h6 {
 
 p {
     color: #445d6e;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     line-height: 24px;
     margin: 10px 0 20px 0;
@@ -256,7 +256,7 @@ img {
     margin-bottom: 15px;
     font-size: 18px;
     font-weight: 200;
-    font-family: Open Sans;
+    font-family: "Open Sans", sans-serif;
     line-height: 30px;
 }
 
@@ -1781,7 +1781,7 @@ footer {
 }
 
 .footer-copyright p {
-    font-family: "Open Sans";
+    font-family: "Open Sans", sans-serif;
     font-size: 12px;
     line-height: 17px;
     color: #637986;
