Oops, returning -webkit-font-smoothing: antialiased;

--- a/css/style-alt.css
+++ b/css/style-alt.css
@@ -10,6 +10,7 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
