--- a/css/style.css
+++ b/css/style.css
@@ -1649,7 +1649,15 @@ div#autocompleteResults span {
     background: #b8e2f9!important;
     color: #518cad;
 }
-
+.autocompleteTitle
+{
+  font-weight: bold;
+  font-size: large;
+}
+.autocompleteUrl, .autocompleteKeywords, .autocompleteDescription {
+  font-size: xx-small;
+  line-height: normal;
+}
 
 /*
 *
