--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,9 @@ a.button.outline-btn {
     box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
     height: 55px;
 }
+.nav .collapse .in {
+  padding-left: 15px;
+}
 
 /*
 *
