--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ p.p2 {
     height: 500px;
     position: relative;
     z-index: 1;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 @keyframes gradientswitch
@@ -552,7 +552,7 @@ img {
   padding: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  min-height: 1000px;
+  /*min-height: 1000px;*/
   width: 260px;
 }
 
@@ -1746,6 +1746,29 @@ footer {
     color: #1488c6;
     padding: 5px 15px;
     display: block;
+}
+.btn-default:hover {
+    color: #fff!important;
+    background-color: transparent!important;
+    border-color: none!important;
+    box-shadow: none!important;
+    opacity: .8;
+}
+
+.btn-group.open .dropdown-toggle {
+    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    background: trr;
+    background: transparent;
+    color: #fff;
+    box-shadow: none;
+}
+
+.btn-default:focus,.btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default:focus, .open>.dropdown-toggle.btn-default:hover {
+    color: #fff!important;
+    background-color: transparent!important;
+    border-color: none!important;
+    box-shadow: none!important
 }
 
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
