add side menu to mobile collapse menu

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -13,7 +13,7 @@
                     </button>
                     <img class="logo" src="../images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs">
                   </div>
-                  <div id="navbar" class="navbar-collapse collapse">
+                  <div class="navbar-collapse collapse">
                       <ul class="primary nav navbar-nav">
                           <li><a href="https://docker.com/what-docker">What is Docker?</a></li>
                           <li><a href="https://docker.com/get-docker">Product</a></li>
