--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
             </button>
                   <a href="/"><img class="logo" src="/images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs"></a>
         </div>
-          <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+          <div class="navbar-collapse" aria-expanded="false" style="height: 1px;">
               <div class="search-form" id="search-div">
                   <form>
                       <form class="search-form form-inline ng-pristine ng-valid" id="searchForm" action="/search/">
