--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ p {
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
     line-height: 24px;
-    margin: 10px 0 20px 0;
+    margin: 10px 0 0;
 }
 
 
@@ -98,19 +98,6 @@ p {
 * other type ******************************************************************
 *
 */
-
-p.p2 {
-    font-size: 16px;
-    line-height: 30px;
-}
-
-.reading-time {
-    font-style: italic;
-    font-size: 80%;
-    display: block;
-    padding: 0;
-    color: #ccc;
-}
 
 .dropdown-header {
     font-size: 13.5px;
@@ -123,34 +110,34 @@ p.p2 {
 }
 /*
 *
-* layout
+* layout - 3 Column Flex
 *
 */
 
-.HolyGrail,
-.HolyGrail-body {
-  display: flex;
-  flex-direction: column;
+.columns,
+.col-body {
+    display: flex;
+    flex-direction: column;
 }
 
-.HolyGrail-nav {
-  order: -1;
+.col-nav {
+    order: -1;
 }
 
-.HolyGrail-content {
+.col-content {
     padding: 60px 69px 50px 20px;
 }
 
 @media (min-width: 768px) {
-  .HolyGrail-body {
+  .col-body {
     flex-direction: row;
     flex: 1;
   }
-  .HolyGrail-content {
+  .col-content {
     flex: 1;
     padding: 60px 20px 50px 20px;
   }
-  .HolyGrail-nav, .HolyGrail-toc {
+  .col-nav, .col-toc {
     flex: 0 0 20em;
   }
 }
@@ -224,9 +211,7 @@ p.p2 {
     color: #fff;
     margin-bottom: 15px;
     font-size: 18px;
-    font-weight: 200;
     font-family: "Open Sans", sans-serif;
-    line-height: 30px;
 }
 
 .hero-text ul {
@@ -238,27 +223,6 @@ p.p2 {
 .hero-text li {
     padding: 0 10px 0 0;
 }
-
-
-/* Portrait and Landscape */
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
-    .hero-text {
-        position: absolute;
-        top: 75px;
-    }
-    .hero-text-centered {
-        -ms-flex: none;
-        flex: none;
-        text-align: center;
-        max-width: 80%;
-    }
-    .hero-text li {
-        float: left;
-        margin: 10px 0 0 0;
-    }
-}
-
 
 /*
 * Search *********************************************************************
@@ -445,32 +409,32 @@ img {
     padding: 5px 0 0 20px;
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
-    .nav-primary {
-        background: #000;
-        padding: 5px 12px;
-        position: absolute;
-        width: 100%;
-        z-index: 9999;
-    }
-    .primary {
-        padding: 20px 0 0;
-        text-align: center;
-    }
-    .user-nav {
-        padding: 5px 0 0;
-        text-align: center;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
-        /** todo remove this **/
-        color: #fff;
-        text-align: center;
-    }
-    .navbar-default .navbar-toggle, .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-        background: transparent;
-        border: 0;
-    }
-}
+// @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+//     .nav-primary {
+//         background: #000;
+//         padding: 5px 12px;
+//         position: absolute;
+//         width: 100%;
+//         z-index: 9999;
+//     }
+//     .primary {
+//         padding: 20px 0 0;
+//         text-align: center;
+//     }
+//     .user-nav {
+//         padding: 5px 0 0;
+//         text-align: center;
+//     }
+//     .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+//         /** todo remove this **/
+//         color: #fff;
+//         text-align: center;
+//     }
+//     .navbar-default .navbar-toggle, .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+//         background: transparent;
+//         border: 0;
+//     }
+// }
 
 /*
 *
@@ -512,12 +476,13 @@ img {
     width: 100%;
     z-index: 10;
     transition: all 0.1s ease;
+    overflow: hidden;
 }
 
 .nav-secondary-tabs.affix {
     background: #0C5176;
     box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
-    max-height: 55px;
+    // max-height: 55px;
     top: 0;
     position: fixed;
     z-index: 100;
@@ -641,7 +606,7 @@ img {
 
 .main-content {
     padding: 15px 15px 25px 21px;
-    max-width: 940px;
+    max-width: 900px;
 }
 
 /*
@@ -652,7 +617,7 @@ img {
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
     .content {
-        padding: 55px 35px 20px 20px;
+        padding: 10px 35px 20px 20px;
         max-width: 390px;
     }
 }
@@ -898,7 +863,7 @@ input:checked+.slider:before {
 
 .tabs li a {
     color: #fff;
-    padding: 19px 20px 13px;
+    padding: 17px 20px 13px;
     float: left;
     opacity: 0.7;
     font-weight: 600;
@@ -1113,7 +1078,7 @@ input:checked+.slider:before {
 }
 
 .nav-secondary-tabs .search-form {
-    margin: 5px 10px 0 0;
+    margin: 5px 10px 5px 0;
 }
 
 .nav-secondary-tabs.affix .search-form {
@@ -1301,7 +1266,7 @@ i.fa.fa-indent, i.fa.fa-outdent {
 
 .component, .component-full {
     background: #FBFBFC;
-    /*border: 1px solid rgba(204, 204, 204, 0.46);*/
+    border: 1px solid rgba(204, 204, 204, 0.21);
 }
 
 .component-full-icon {
@@ -1350,6 +1315,13 @@ a.anchorLink {
 * tables
 *
 */
+
+.reading-time {
+    font-style: italic;
+    font-size: 12px;
+    display: block;
+    color: rgba(13, 86, 125, 0.55);
+}
 
 table {
     border: 1px solid rgba(204, 204, 204, 0.29);
@@ -1404,6 +1376,7 @@ code {
     padding: 0px 20px 20px 16px;
     min-width: 360px;
 }
+
 /*
   *
   * autocompleteResults  **********************************************************
@@ -1429,13 +1402,6 @@ ul.autocompleteList {
 
 .autocompleteList li {
     padding: 5px 0 7px 0;
-}
-
-span.reading-time {
-    font-style: italic;
-    font-size: 12px;
-    display: block;
-    color: #999;
 }
 
 div#autocompleteResults span {
@@ -1546,7 +1512,7 @@ footer {
     background: #fff;
     /*box-shadow: 0 0 12px 7px rgba(255, 255, 255, 0.68), 0 4px 8px 3px rgb(255, 255, 255);*/
     position: relative;
-    z-index: 99999;
+    // z-index: 99999;
 }
 
 .top_footer {
@@ -1682,6 +1648,26 @@ footer {
     h4 {
         font-size: 16px;
     }
+    .hero-text  {
+        height: 21em;
+    }
+    .hero-text .button {
+        margin: 0;
+    }
+    // .hero-text {
+    //     position: absolute;
+    //     top: 75px;
+    // }
+    .hero-text-centered {
+        -ms-flex: none;
+        flex: none;
+        text-align: center;
+        max-width: 80%;
+    }
+    .hero-text li {
+        float: left;
+        margin: 10px 0 0 0;
+    }
     .nav-secondary {
         background: #192837;
         box-shadow: 0;
@@ -1698,8 +1684,8 @@ footer {
         color: #ffffff;
     }
     .nav-secondary .search-form {
-        width: 92%;
-        margin: 10px 10px 0 -11px;
+        width: 100%;
+        margin: 10px 10px 0 0px;
     }
     .nav-secondary .search-form input[type=search]:focus {
         background: rgb(29, 60, 76) url("/images/search.png") no-repeat;
@@ -1707,15 +1693,17 @@ footer {
         box-shadow: none;
         color: #fff;
     }
+    .nav-secondary-tabs {
+        height: 105px;
+    }
     .nav-secondary-tabs.affix {
-        background: #0C5176;
+        background: #192837;
         box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
         top: 0;
         position: fixed;
         z-index: 100;
-        height: 55px;
+        height: 95px;
     }
-
     .sidebar {
         background: #15212e;
         padding-top: 140px;
@@ -1724,16 +1712,16 @@ footer {
         margin: 0 -15px;
     }
     .tabs {
-        padding: 00;
+        height: 50px;
+        padding: 0 0 0 12px;
         width: auto;
     }
     .tabs li a {
         color: #fff;
-        padding: 15px 3px 10px 8px;
+        padding: 15px 6px 10px 6px;
         float: left;
         opacity: 0.7;
-        font-weight: 600;
-        font-size: 11px;
+        font-size: 12px;
     }
     .main-content {
         padding: 0px 5px 25px 20px;
@@ -1879,4 +1867,10 @@ footer {
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
     background-color: transparent;
     border-color: #337ab7;
+}
+
+.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #0c5176;
 }
